@@ -1,18 +1,18 @@
 package com.busanit501.shoppingweb_project.service;
 
 import com.busanit501.shoppingweb_project.domain.Product;
-import com.busanit501.shoppingweb_project.domain.ProductImgDetail;
 import com.busanit501.shoppingweb_project.domain.enums.ProductCategory;
 import com.busanit501.shoppingweb_project.dto.ProductDTO;
 import com.busanit501.shoppingweb_project.repository.ProductRepository;
+import com.busanit501.shoppingweb_project.repository.ProductImageRepository;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
-import java.util.Comparator;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -22,83 +22,55 @@ import java.util.stream.Collectors;
 public class ProductServiceImpl implements ProductService {
 
     private final ProductRepository productRepository;
+    private final ProductImageRepository productImageRepository;
     private final ModelMapper modelMapper;
 
     @Override
     public ProductDTO getProductById(Long productId) {
-        log.info("ProductService 에서 받아온 Id확인중 : " + productId);
+        log.info("ProductService - getProductById: " + productId);
         Product product = productRepository.findById(productId)
-                .orElseThrow(() -> new IllegalArgumentException("상품이 없습니다."));
-        // product에 설정된 이미지파일을 List형식으로 만들어주기
-        List<String> imageFileNames = product.getImageSet().stream()
-                .sorted(Comparator.comparingInt(ProductImgDetail::getOrd)) // ord 기준 정렬
-                .map(ProductImgDetail::getFileName)
-                .collect(Collectors.toList());
-        // DTO로 변환
-        ProductDTO productDTO = ProductDTO.builder()
-                .productId(product.getProductId())
-                .productName(product.getProductName())
-                .price(product.getPrice())
-                .productTag(product.getProductTag())
-                .fileNames(imageFileNames)
-                .build();
-        log.info("ProductService 에서 받아온 pproductDTO확인 : " + productDTO);
+                .orElseThrow(() -> new IllegalArgumentException("상품이 없습니다. id=" + productId));
+
+        ProductDTO productDTO = entityToDto(product);
+
+        // 썸네일 이미지 설정
+        productImageRepository.findByProductIdAndThumbnail(product.getProductId(), true)
+                .ifPresent(productImage -> productDTO.setImageFileName(productImage.getFileName()));
+
         return productDTO;
     }
 
     @Override
     public List<ProductDTO> getAllProducts() {
+        log.info("ProductService - getAllProducts 호출");
         List<Product> products = productRepository.findAll();
-        log.info("ProductService에서 모든 Product 받아오는 중 " + products);
-        List<ProductDTO> productDTO = products.stream()
-                .map(ProductDTO::fromEntity) // 위에서 만든 정적 팩토리 메서드 사용
+        return products.stream()
+                .map(this::mapProductToDtoWithImage)
                 .collect(Collectors.toList());
 
-        return productDTO;
     }
 
     @Override
     public List<ProductDTO> getProductsByCategory(String category) {
-        ProductCategory productCategory;
-        try {
-            productCategory = ProductCategory.fromKoreanName(category);
-        } catch (IllegalArgumentException e) {
-            throw new IllegalArgumentException("잘못된 카테고리 값입니다: " + category);
-        }
-
-        // 2. Repository 호출
+        log.info("ProductService - getProductsByCategory: " + category);
+        ProductCategory productCategory = ProductCategory.fromKoreanName(category);
         List<Product> products = productRepository.findByProductTag(productCategory);
-
-        // 3. Entity → DTO 변환
         return products.stream()
-                .map(product -> ProductDTO.builder()
-                        .productId(product.getProductId())
-                        .productName(product.getProductName())
-                        .price(product.getPrice())
-                        .stock(product.getStock())
-                        .productTag(ProductCategory.valueOf(product.getProductTag().name())) // 문자열로 변환
-                        .build())
-                .toList();
-
+                .map(this::mapProductToDtoWithImage)
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<ProductDTO> searchProducts(String keyword) {
+        log.info("ProductService - searchProducts: " + keyword);
         List<Product> products = productRepository.searchByKeyword(keyword);
-
         return products.stream()
-                .map(product -> ProductDTO.builder()
-                        .productId(product.getProductId())
-                        .productName(product.getProductName())
-                        .price(product.getPrice())
-                        .stock(product.getStock())
-                        .productTag(ProductCategory.valueOf(product.getProductTag().name())) // Enum → String
-                        .build())
-                .toList();
+                .map(this::mapProductToDtoWithImage)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public void saveProduct(Product product){
+    public void saveProduct(Product product) {
         productRepository.save(product);
     }
 
@@ -109,20 +81,21 @@ public class ProductServiceImpl implements ProductService {
             productDTO.setProductTag(ProductCategory.UNKNOWN);
         }
         Product product = dtoToEntity(productDTO);
-        Product saved = productRepository.save(product);
-        return entityToDto(saved);
+        Product savedProduct = productRepository.save(product);
+        return entityToDto(savedProduct);
     }
 
     // 상품 수정 메서드 구현
     @Override
     public ProductDTO updateProduct(Long productId, ProductDTO productDTO) {
-        log.info("ProductService에서 작업중 수정된 ProductDTO : "+productDTO.getProductName());
+        log.info("ProductService에서 작업중 수정된 ProductDTO : " + productDTO.getProductName());
         Product product = productRepository.findById(productId)
                 .orElseThrow(() -> new IllegalArgumentException("상품이 없습니다. id=" + productId));
         // 상품 정보 수정
         product.changeTitleContent(productDTO);
-        log.info("ProductService에서 작업중 수정된 Product : "+product.getProductName());
-        return entityToDto(product);
+        log.info("ProductService에서 작업중 수정된 Product : " + product.getProductName());
+        Product updatedProduct = productRepository.save(product);
+        return entityToDto(updatedProduct);
     }
 
     // 상품 삭제 메서드 구현
@@ -131,27 +104,12 @@ public class ProductServiceImpl implements ProductService {
         productRepository.deleteById(productId);
     }
 
-    // DTO → Entity 변환
-    public Product dtoToEntity(ProductDTO dto) {
-        return Product.builder()
-                .productName(dto.getProductName())
-                .price(dto.getPrice())
-                .stock(dto.getStock())
-                .image(dto.getImage())
-                .productTag(dto.getProductTag())
-                .build();
-    }
-
-    // Entity → DTO 변환
-    public ProductDTO entityToDto(Product product) {
-        return ProductDTO.builder()
-                .productId(product.getProductId())
-                .productName(product.getProductName())
-                .price(product.getPrice())
-                .stock(product.getStock())
-                .image(product.getImage())
-                .productTag(product.getProductTag())
-                .build();
+    // Helper method to map Product to ProductDTO and attach image filename
+    private ProductDTO mapProductToDtoWithImage(Product product) {
+        ProductDTO dto = entityToDto(product);
+        productImageRepository.findByProductIdAndThumbnail(product.getProductId(), true)
+                .ifPresent(productImage -> dto.setImageFileName(productImage.getFileName()));
+        return dto;
     }
 
 }
